<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblEliminarJuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="60dp"
        android:text="@string/txt_lbl_altas_alumnos"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:text="Eliminar Juego" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_buscarConsultas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_searchB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/txt_btn_consultas" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="40dp"
        android:text="@string/txt_lbl_num_control"
        tools:text="ID Juego:" />

    <EditText
        android:id="@+id/txt_IdJuegoBajas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:text="@string/txt_lbl_nombre"
        tools:text="Titulo:" />

    <EditText
        android:id="@+id/txt_TituloBajas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:text="@string/txt_lbl_primer_ap"
        tools:text="Plataforma" />

    <Spinner
        android:id="@+id/spinnerPlataforma"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:entries="@array/Plataformas"
        android:saveEnabled="false" />

    <TextView
        android:id="@+id/textView5_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:text="@string/txt_lbl_segundo_ap" />

    <EditText
        android:id="@+id/txt_cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView6_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:text="@string/txt_lbl_edad" />

    <EditText
        android:id="@+id/txt_Precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_eliminarB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:onClick="OnClick"
        android:text="@string/txt_btn_bajas" />

</LinearLayout>