<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="25dp"
            android:textAlignment="textEnd"
            android:textColor="@color/ColorBlanco"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TituloProducto"
        android:textAlignment="center"
        android:textColor="@color/ColorBlanco"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_AgregarPr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@android:drawable/checkbox_on_background"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_altas"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btn_EliminarPr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@android:drawable/ic_delete"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_bajas"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btn_ModificarPr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@android:drawable/sym_contact_card"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_cambios"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btn_consultasPr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:drawableRight="@android:drawable/ic_search_category_default"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_consultas"
        android:textAlignment="viewStart" />

</LinearLayout>
