<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblBuscarJuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="60dp"
        android:text="@string/txt_lbl_altas_alumnos"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:text="Buscar Juego" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_buscarConsultas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_searchB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/txt_btn_consultas" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/txt_lbl_primer_ap"
        tools:text="Plataforma" />

    <Spinner
        android:id="@+id/spnPlataformaConsultas"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:entries="@array/Plataformas" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV"
        android:layout_width="match_parent"
        android:layout_height="471dp" />

</LinearLayout>




