<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:orientation="vertical">

    <Switch
        android:id="@+id/switch1"
        style="@style/Base.Widget.AppCompat.CompoundButton.Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginRight="0dp"
        android:checked="false"
        android:showText="false"
        android:text="@string/SWITCH_OFF"
        android:textAlignment="textEnd"
        android:textOff="@string/SWITCH_OFF"
        android:textOn="@string/SWITCH_ON"
        android:trackTint="#99E91A"
        tools:checked="false" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@mipmap/account" />

    <TextView
        android:id="@+id/tituloLogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="@color/ColorBlanco"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:text="@string/Login"
        android:textSize="24sp" />

</LinearLayout>