<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="67dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TituloTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="103dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="114dp" />

    <TextView
        android:id="@+id/IDlay"
        android:layout_width="176dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ID"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/np"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloId" />

    <TextView
        android:id="@+id/tituloTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Tp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloNombre" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="177dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/IDlay" />

    <TextView
        android:id="@+id/Tipolay"
        android:layout_width="74dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/nom" />

    <TextView
        android:id="@+id/TituloCantidad"
        android:layout_width="64dp"
        android:layout_height="18dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/CA"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/Tipolay"
        app:layout_constraintTop_toBottomOf="@+id/nom" />

    <TextView
        android:id="@+id/cantidadlay"
        android:layout_width="84dp"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toEndOf="@+id/TituloCantidad"
        app:layout_constraintTop_toBottomOf="@+id/nom" />

</androidx.constraintlayout.widget.ConstraintLayout>